--- a/src/pages/AICopilot.css
+++ b/src/pages/AICopilot.css
@@ -3,7 +3,7 @@
 .cop-container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 96px);
+  height: calc(100vh - 106px);
   background: #ffffff;
   overflow: hidden;
   position: relative;
