--- a/src/pages/MessageCenter.css
+++ b/src/pages/MessageCenter.css
@@ -2,7 +2,7 @@
 
 .mc-container {
   display: flex;
-  height: calc(100vh - 96px);
+  height: calc(100vh - 106px);
   background: #eae6df;
   overflow: hidden;
 }
