--- a/src/pages/TaskCenter.css
+++ b/src/pages/TaskCenter.css
@@ -3,7 +3,7 @@
 .tc-container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 96px);
+  height: calc(100vh - 106px);
   background: #f8fafc;
   overflow: hidden;
 }
